--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
      <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
    <!-- Main CSS -->
-   <link rel="stylesheet" href="/css/main.css">
-   <link rel="stylesheet" href="/css/helper.css">
-   <link rel="stylesheet" href="/fonts/Inter/stylesheet.css">
-  <title>Exely</title>
+   <link rel="stylesheet" href="css/main.css">
+   <link rel="stylesheet" href="css/helper.css">
+   <link rel="stylesheet" href="fonts/Inter/stylesheet.css">
+  <title>DELAEM</title>
 </head>
 <body>
 
