header/footer mobile

--- a/main.html
+++ b/main.html
@@ -484,7 +484,7 @@
 
  <div class="footer_column_2">
       <a href="tel:+7 (901) 743-49-95" class="fw-700 fs-md-32 fs-20">+7 (901) 743-49-95</a>
-      <button class="delaem_btn">Заказать звонок</button>
+      <button class="delaem_btn mb-5">Заказать звонок</button>
       <div>г. Москва, Рубцовская набережная, 3с1</div>
       <span>10 этаж, офис 4</span>
 </div>
